--- a/client/src/components/GlobalStyle/GlobalStyles.scss
+++ b/client/src/components/GlobalStyle/GlobalStyles.scss
@@ -1,6 +1,6 @@
+@import 'normalize.css';
 @import url('../../assets/icons/fontawesome-free-6.4.0-web/css/all.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Poppins:wght@300;400&family=Quicksand:wght@300;400;500;600;700&display=swap');
 
-
-.color{
-    color: red;
-}
+@import 'variables';
+@import 'base';
