--- a/client/src/components/GlobalStyle/_base.scss
+++ b/client/src/components/GlobalStyle/_base.scss
@@ -4,17 +4,26 @@
     padding: 0;
 }
 html {
-    font-size: 62.5%;
+    font-size: 16px !important;
 }
 
 body {
     font-family: 'Montserrat', sans-serif;
     font-family: 'Poppins', sans-serif;
     font-family: 'Quicksand', sans-serif;
-    font-size: 1.6rem;
+    font-size: 1rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
-    overflow-y: overlay;
+    // overflow-y: overlay;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
 }
 
 button,
@@ -25,9 +34,5 @@ input,
 }
 
 a {
-    color: var(--text-color);
-}
-
-.color {
     color: var(--text-color);
 }
