--- a/client/src/components/GlobalStyle/_variables.scss
+++ b/client/src/components/GlobalStyle/_variables.scss
@@ -7,6 +7,8 @@
     --black-color: #000;
     --white-color: #fff;
 
+    --bg-content-admin: #eaeaea;
+
     --header_nav-height: 100px;
     --header_search-height: 100px;
     --header-height: calc(var(--header_nav-height) + var(--header_search-height));
