--- a/client/src/components/NavMenu/NavMenu.scss
+++ b/client/src/components/NavMenu/NavMenu.scss
@@ -1,5 +1,5 @@
 .nav--link {
     &:hover:not(.active) {
-        background-color: var(--primary-color);
+        background-color: #f0efef;
     }
 }
