--- a/client/src/layouts/AdminLayout/components/Sidebar/Sidebar.scss
+++ b/client/src/layouts/AdminLayout/components/Sidebar/Sidebar.scss
@@ -6,6 +6,7 @@
     .btn--logout {
         &:hover {
             background-color: var(--primary-color);
+            color: var(--white-color);
         }
     }
 }
