Create Cpn Button + icon + 70% info admin

--- a/client/src/components/GlobalStyle/_base.scss
+++ b/client/src/components/GlobalStyle/_base.scss
@@ -35,3 +35,11 @@ input,
 a {
     color: var(--text-color);
 }
+
+.wrapper-page {
+    height: 90vh;
+    margin-top: 10vh;
+    padding-bottom: 8px;
+    width: 100%;
+    overflow: auto;
+}
