--- a/client/src/layouts/AdminLayout/components/Header/Header.scss
+++ b/client/src/layouts/AdminLayout/components/Header/Header.scss
@@ -1,4 +1,5 @@
 .wrapper--header {
+    height: 10vh;
     background-color: var(--bg-content-admin);
     .header-content {
         background-color: var(--primary-color);
