Complete 100% Page Info Admin

--- a/client/src/components/GlobalStyle/GlobalStyles.scss
+++ b/client/src/components/GlobalStyle/GlobalStyles.scss
@@ -1,6 +1,7 @@
 @import 'normalize.css';
 @import url('../../assets/icons/fontawesome-free-6.4.0-web/css/all.min.css');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&family=Poppins:wght@300;400&family=Quicksand:wght@300;400;500;600;700&display=swap');
-
+@import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css');
 @import 'variables';
 @import 'base';
