--- a/client/src/components/GlobalStyle/_base.scss
+++ b/client/src/components/GlobalStyle/_base.scss
@@ -22,6 +22,7 @@ html {
     *::-webkit-scrollbar {
         border-radius: 0;
         width: 8px;
+        height: 8px;
     }
     *::-webkit-scrollbar-thumb {
         border-radius: 4px;
