--- a/client/src/components/GlobalStyle/_base.scss
+++ b/client/src/components/GlobalStyle/_base.scss
@@ -19,14 +19,17 @@ body {
 
 // scrollbar css
 html {
-    *:not(.wrapper-table)::-webkit-scrollbar {
+    *::-webkit-scrollbar {
         border-radius: 0;
         width: 8px;
         height: 8px;
     }
-    *:not(.wrapper-table)::-webkit-scrollbar-thumb {
+    *::-webkit-scrollbar-thumb {
         border-radius: 4px;
         background-color: rgba(0, 0, 0, 0.3);
+    }
+    *:not(.wrapper-table)::-webkit-scrollbar-thumb {
+        background-color: var(--primary-color);
     }
     *:not(.wrapper-table)::-webkit-scrollbar-track {
         border-radius: 0;
@@ -45,15 +48,6 @@ h6 {
 
 a {
     color: var(--text-color);
-}
-
-.wrapper-page {
-    height: 90vh;
-    min-height: 90vh;
-    margin-top: 10vh;
-    padding-bottom: 8px;
-    width: 100%;
-    overflow: auto;
 }
 
 .wrapper-table {
