--- a/client/src/components/GlobalStyle/_base.scss
+++ b/client/src/components/GlobalStyle/_base.scss
@@ -29,6 +29,7 @@ html {
         background-color: rgba(0, 0, 0, 0.3);
     }
     *:not(.wrapper-table)::-webkit-scrollbar-thumb {
+        // background-color: rgba(0, 0, 0, 0.6);
         background-color: var(--primary-color);
     }
     *:not(.wrapper-table)::-webkit-scrollbar-track {
@@ -51,7 +52,7 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0;
+    margin: 0 !important;
 }
 
 a {
