--- a/client/src/components/GlobalStyle/_variables.scss
+++ b/client/src/components/GlobalStyle/_variables.scss
@@ -9,9 +9,7 @@
 
     --bg-content-admin: #eaeaea;
 
-    --header_nav-height: 100px;
-    --header_search-height: 100px;
-    --header-height: calc(var(--header_nav-height) + var(--header_search-height));
+    --header-height: 128px;
 
     --header-admin-height: 64px;
     --page-admin-height: calc(100vh - var(--header-admin-height));
