Add section category + outstand (product) + edit section banner + edit (maniLayout + home) + add icon svg

--- a/client/src/pages/Customer/Home/style_home.scss
+++ b/client/src/pages/Customer/Home/style_home.scss
@@ -2,6 +2,7 @@
 #sec-banner {
     .carousel {
         position: relative;
+        border: none;
     }
     .flickity-page-dots {
         display: flex;
