edit header mainLayout + add setTimeout call API component search

--- a/client/src/layouts/components/Header/header.scss
+++ b/client/src/layouts/components/Header/header.scss
@@ -3,7 +3,7 @@
         position: relative;
     }
     .nav--link.active {
-        color: blue;
+        color: red;
         font-weight: bold;
     }
     .nav--link:not(.active):hover::before {
