--- a/client/src/components/GlobalStyle/GlobalStyles.scss
+++ b/client/src/components/GlobalStyle/GlobalStyles.scss
@@ -3,5 +3,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Montserrat:wght@300;400;500;600&family=Poppins:wght@300;400&family=Quicksand:wght@300;400;500;600;700&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css');
+@import '_grid_layout';
 @import 'variables';
 @import 'base';
