--- a/client/src/pages/Customer/Home/style_home.scss
+++ b/client/src/pages/Customer/Home/style_home.scss
@@ -1,34 +1,42 @@
 // Flickity
-// .carousel {
-//     position: relative;
-//     border: none;
-//     .flickity-page-dots {
-//         display: flex;
-//         gap: 16px;
-//         position: absolute;
-//         bottom: 10px;
-//         left: 50%;
-//         transform: translateX(-50%);
-//         .dot {
-//             width: 20px;
-//             height: 20px;
-//             border-radius: 50%;
-//             background-color: black;
-//             cursor: pointer;
-//         }
-//     }
-//     .flickity-button {
-//         position: absolute;
-//         top: 50%;
-//         transform: translateY(-50%);
-//         width: 100px;
-//         height: 100px;
-//         background-color: blue;
-//     }
-//     .flickity-button.previous {
-//         left: 0;
-//     }
-//     .flickity-button.next {
-//         right: 0;
-//     }
-// }
+#sec-home_all_product {
+    .carousel {
+        position: relative;
+        border: none;
+        .flickity-page-dots {
+            display: flex;
+            gap: 16px;
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            .dot {
+                width: 20px;
+                height: 20px;
+                border-radius: 50%;
+                background-color: black;
+                cursor: pointer;
+            }
+        }
+        .flickity-button {
+            opacity: 0;
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 50px;
+            height: 50px;
+            padding: 10px;
+            border-radius: 10px;
+            background-color: var(--primary-color);
+        }
+        .flickity-button.previous {
+            left: 0;
+        }
+        .flickity-button.next {
+            right: 0;
+        }
+    }
+    .slide-product:hover .flickity-button {
+        opacity: 1;
+    }
+}
