Done Layout page home

--- a/client/src/components/CardProduct/cardProduct.scss
+++ b/client/src/components/CardProduct/cardProduct.scss
@@ -1,7 +1,7 @@
 .percent-reduce::before {
     content: '';
     border-width: 0 24px 16px;
-    border-color: transparent #dc2626 transparent #dc2626;
+    border-color: transparent #facc15 transparent #facc15;
     position: absolute;
     top: 100%;
     left: 0;
