--- a/client/src/components/GlobalStyle/_base.scss
+++ b/client/src/components/GlobalStyle/_base.scss
@@ -85,12 +85,42 @@ a {
 
 // title
 .title {
+    position: relative;
     font-family: 'Alfa Slab One', serif !important;
     padding: 0 20px;
     text-align: center;
     font-weight: 400;
     text-align: center;
     padding: 16px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.style-title::before {
+    content: '';
+    border-width: 36px 0 36px 72px;
+    border-color: transparent transparent transparent #f5f5f5;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.style-title::after {
+    content: '';
+    border-width: 36px 72px 36px 0;
+    border-color: transparent #f5f5f5 transparent transparent;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+@media (max-width: 767px) {
+    .style-title::before,
+    .style-title::after {
+        content: '';
+        display: none;
+    }
 }
 
 .limit-text {
