Done footer + done menu header mobile

--- a/client/src/layouts/components/Header/header.scss
+++ b/client/src/layouts/components/Header/header.scss
@@ -49,3 +49,13 @@
         width: 100%;
     }
 }
+
+// menu mobile
+#menu-mobile_content {
+    transform: translateX(-100%);
+    transition: all 0.5s;
+}
+
+#menu-mobile_content.active {
+    transform: translateX(0) !important;
+}
