--- a/client/src/pages/Customer/Home/style_home.scss
+++ b/client/src/pages/Customer/Home/style_home.scss
@@ -47,8 +47,8 @@
     }
 }
 
-@media (max-width: 1023px) {
-    .flickity-button {
-        display: none;
-    }
-}
+// @media (max-width: 1023px) {
+//     .flickity-button {
+//         display: none;
+//     }
+// }
