--- a/client/src/pages/Customer/Login/login.scss
+++ b/client/src/pages/Customer/Login/login.scss
@@ -1,6 +1,6 @@
-.wrapper--login_admin {
+.wrapper--login {
     .invalid {
-        input {
+        .input {
             border-color: red;
         }
     }
