--- a/client/src/pages/Customer/Home/style_home.scss
+++ b/client/src/pages/Customer/Home/style_home.scss
@@ -19,36 +19,69 @@
             }
         }
         .flickity-button {
-            opacity: 0;
             position: absolute;
-            top: 50%;
+            bottom: 0;
             transform: translateY(-50%);
-            width: 50px;
-            height: 50px;
-            padding: 10px;
-            border-radius: 10px;
+            width: 100px;
+            height: 30px;
+            padding: 5px;
             background-color: var(--primary-color);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .flickity-button:disabled {
+            background-color: #ccc;
         }
         .flickity-button.previous {
             svg {
+                width: 20px;
                 fill: #fff;
             }
-            left: 0;
+            left: 50%;
+            transform: translateX(-125%);
         }
         .flickity-button.next {
             svg {
+                width: 20px;
                 fill: #fff;
             }
+            right: 50%;
+            transform: translateX(125%);
+        }
+        .flickity-button.previous::before {
+            content: '';
+            border-width: 15px 25px 15px 25px;
+            border-color: #f5f5f5 transparent #f5f5f5 #f5f5f5;
+            position: absolute;
+            top: 0;
+            left: -50%;
+            transform: translateX(50%);
+        }
+        .flickity-button.previous::after {
+            content: '';
+            border-width: 15px 25px 15px 25px;
+            border-color: transparent #f5f5f5 transparent transparent;
+            position: absolute;
+            top: 0;
             right: 0;
         }
-    }
-    .slide-product:hover .flickity-button {
-        opacity: 1;
+        .flickity-button.next::before {
+            content: '';
+            border-width: 15px 25px 15px 25px;
+            border-color: transparent transparent transparent #f5f5f5;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+        .flickity-button.next::after {
+            content: '';
+            border-width: 15px 25px 15px 25px;
+            border-color: #f5f5f5 transparent #f5f5f5 transparent;
+            position: absolute;
+            top: 0;
+            right: 0;
+            transform: translateX(50%);
+        }
     }
 }
-
-// @media (max-width: 1023px) {
-//     .flickity-button {
-//         display: none;
-//     }
-// }
