--- a/client/src/components/GlobalStyle/_base.scss
+++ b/client/src/components/GlobalStyle/_base.scss
@@ -4,10 +4,13 @@
     padding: 0;
 }
 html {
+    height: 100%;
     font-size: 16px !important;
 }
 
 body {
+    height: 100%;
+
     font-family: 'Alfa Slab One', serif;
     font-family: 'Montserrat', sans-serif;
     font-family: 'Poppins', sans-serif;
