--- a/client/src/pages/Customer/Login/login.scss
+++ b/client/src/pages/Customer/Login/login.scss
@@ -1,4 +1,7 @@
 .wrapper--login {
+    background-image: url('../../../assets/images/bgr_login.jpg');
+    background-size: cover;
+    background-position: center;
     .invalid {
         .input {
             border-color: red;
