fix (header): change logo heder

--- a/client/src/pages/Customer/Login/login.scss
+++ b/client/src/pages/Customer/Login/login.scss
@@ -1,5 +1,5 @@
 .wrapper--login {
-    background-image: url('../../../assets/images/bgr_login.jpg');
+    background-image: url('../../../assets/images/bgr_login.png');
     background-size: cover;
     background-position: center;
     .invalid {
