style: edit color header and css title product

--- a/client/src/components/GlobalStyle/_variables.scss
+++ b/client/src/components/GlobalStyle/_variables.scss
@@ -1,5 +1,7 @@
 :root {
-    --primary-color: #f9a529;
+    --primary-color: #1c1678;
+    --category-color: rgb(238, 30, 30);
+    --primary-color-hover: #3931ab;
     --text-color: #363025;
     --price-color: #ef1515;
     --sale_price-color: #363025;
